# janstungstenkernel

./: README.md  pyproject.toml
example/: example.ipynb
janstungstenkernel/: kernel.json
src/janstungstenkernel/: __main__.py  install_kernelspec.py  kernel.py
